syntax = "proto3";

package product;

service ProductService {
  rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
  rpc GetProductById (GetProductRequest) returns (ProductResponse);
  rpc ListProducts (Empty) returns (ProductList);
}

message CreateProductRequest {
  string name = 1;
  string description = 2;
  float price = 3;
  string userId = 4; // Reference to the creator user
}

message GetProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
  float price = 4;
  string userId = 5;
}

message ProductList {
  repeated ProductResponse products = 1;
}

message Empty {}
